--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -16,6 +16,11 @@
         android:textSize="60sp" />
 
 
+    <ImageView
+        android:id="@+id/tubiao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 
     <TextView
